# imgserv

./: .gitignore  Cargo.nix  Cargo.toml  Rocket.toml  build.rs  flake.nix  package.nix
.sqlx/: query-0334ddf3a0288eab09568fb838add5c9a480efcc400f6df06bb843f78e61f870.json  query-4d9a1b8ff9d6b35e0827c05c8ef42dfb5a310af78f55e462b319607e0b66e560.json  query-52f53baeb3f3c6fa02fc6435c90a9524085e3828cc4d78ea44e3f4b6b55b5d2a.json  query-9a5a1bf13172e500d94d3fe181603fc42ea411bbaa66542a7865e5ac46d895e7.json  query-9c313e3ee441ab4ae805dacd5c09c393ea078e6e47f4cf07d54da8e68d6f2115.json  query-9ea82cd2609e6fce03a2374678ea618042499945a9405e98adc77438c4fa33e8.json  query-9eeea857dedf86252837277c1acf13b96df70b7024d840f6d75e635c93c1d86d.json  query-db14d8132c06851dcd083c6e207060130641dbff7c02427ce52fd9a75ffcc523.json  query-dd7db1589a3cfc685cf86462b6e62adafd933ec8e58d10388007b23733c736b0.json  query-de37ad7c3b61928f965825d54a67ab6e153306f7aea629658009702073339ce9.json
data/: paste.html
migrations/: 20240915090456_setup.sql  20241012004334_drop_type.sql  20241020015815_add_pastes.sql
src/: cleanup.rs  img.rs  main.rs
src/http/: decompress.rs  img.rs  mod.rs  paste.rs
