[package]
name = "imgserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
thiserror = "1.0"
toml = { version = "0.8", default-features = false, features = ["parse"] }
# tree_magic_mini = "3.1"
tree_magic_mini = {git = "https://github.com/mbrubeck/tree_magic.git"}

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

