[package]
name = "imgserv"
version = "0.1.0"
edition = "2021"


[dependencies]
#web framework
axum = "0.7"
tokio = {version="1.0",features=["full"]}
sqlx = {version="0.8",default-features=false,features=["sqlite", "runtime-tokio","macros","migrate"]}

#parsing
serde = "1.0"
toml = { version = "0.8", default-features = false, features = ["parse"] }
tree_magic_mini = {git = "https://github.com/mbrubeck/tree_magic.git"}
# tree_magic_mini = "3.1"

#utilities
anyhow = "1.0"
tokio-util = { version = "0.7.12", features = ["io-util", "full"] }
futures = "0.3"

[profile.release]
strip=true
lto=true
codegen-units=1
